--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,16 @@
+bcrypt==4.3.0
+blinker==1.9.0
+click==8.1.8
 Flask==2.3.2
 Flask-Bcrypt==1.0.1
 Flask-Login==0.6.3
-Flask-SQLAlchemy==3.0.5
-Flask-WTF==1.1.1
-WTForms==3.1.1
+Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.1
+greenlet==3.1.1
+itsdangerous==2.2.0
 Jinja2==3.1.2
-werkzeug==2.3.3
-coverage
-python-dotenv
-prometheus-flask-exporter
+MarkupSafe==3.0.2
+SQLAlchemy==2.0.40
+typing_extensions==4.13.0
+Werkzeug==2.3.8
+WTForms==3.1.2
