--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,25 @@
-FROM python:3.9-slim-buster
+version: '3.8'
 
-WORKDIR /app
+services:
+  web:
+    build: .
+    container_name: flask_app
+    ports:
+      - "5001:5000"
+    volumes:
+      - .:/app
 
-COPY requirements.txt .
+  prometheus:
+    image: prom/prometheus
+    container_name: prometheus
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+    ports:
+      - "9090:9090"
 
-RUN pip install --upgrade pip \
-  && pip install --no-cache-dir -r requirements.txt \
-  && rm -rf /root/.cache/pip \   
-  && apt-get update \
-  && apt-get install -y --no-install-recommends \   
-  && apt-get clean \
-  && rm -rf /var/lib/apt/lists/*
-
-COPY . .
-
-ENV FLASK_APP=todo_project/run.py
-ENV FLASK_RUN_PORT=5000
-
-EXPOSE 5000
-
-CMD ["flask", "run", "--host=0.0.0.0", "--port=5000"]
+  grafana:
+    image: grafana/grafana
+    ports:
+      - "3000:3000"
+    depends_on:
+      - prometheus
